Fixed padding on mobile, updated idea in readme

--- a/style/index.css
+++ b/style/index.css
@@ -31,15 +31,13 @@ main {
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  padding: 60px 0;
+  padding: 60px 30px;
 }
 
-h1 {
-  font-weight: 300;
-}
-
+h1,
 h2 {
   font-weight: 300;
+  text-align: center;
 }
 
 a {
